--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,5 @@
     "noImplicitAny": false,
     "strictNullChecks": false
   },
-  "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["src"]
 }
